Set index.html inside my-portfolio as main file

--- a/my-portfolio/about.html
+++ b/my-portfolio/about.html
@@ -259,7 +259,7 @@
                     I am a passionate software developer with a strong interest in problem-solving and building efficient, user-focused applications. I enjoy working on innovative projects and collaborating in dynamic environments.
                 </p>
             </div>
-            <img src="assets/images/photo.jpeg" class="profile-img">
+            <img src="../assets/images/photo.jpeg" class="profile-img">
         </div>
 
         <h3 class="section-title">Skills</h3>
