--- a/my-portfolio/about.html
+++ b/my-portfolio/about.html
@@ -21,7 +21,7 @@
             min-height: 100vh;
         }
 
-        /* NAVBAR */
+        /* ================= NAVBAR (Unified Design) ================= */
         .navbar {
             position: fixed;
             top: 0;
@@ -63,13 +63,14 @@
             transition: 0.4s;
         }
 
-        .navbar ul li a:hover::after {
+        .navbar ul li a:hover::after,
+        .navbar ul li a.active::after {
             width: 100%;
         }
 
-        /* PAGE WRAPPER */
+        /* ================= PAGE WRAPPER ================= */
         .about-wrapper {
-            padding: 120px 0 80px 0;
+            padding: 120px 80px 80px;
             display: flex;
             justify-content: center;
             animation: slideUp 1.2s ease forwards;
@@ -77,7 +78,7 @@
         }
 
         .about-card {
-            width: 88%;
+            width: 90%;
             background: rgba(255,255,255,0.08);
             backdrop-filter: blur(14px);
             border-radius: 20px;
@@ -91,7 +92,7 @@
 
         .about-title p {
             color: #94a3b8;
-            margin-bottom: 30px;
+            margin-bottom: 40px;
         }
 
         /* CONTENT + IMAGE */
@@ -105,6 +106,7 @@
         .role {
             font-size: 1.6rem;
             margin-bottom: 6px;
+            color: #e5e7eb;
         }
 
         .subtitle {
@@ -133,6 +135,7 @@
             width: 100%;
             border-radius: 18px;
             border: 3px solid rgba(56,189,248,0.4);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
         .section-title {
@@ -142,7 +145,7 @@
             margin-bottom: 20px;
         }
 
-        /* SKILLS ANIMATION */
+        /* SKILLS */
         .skills-grid {
             display: grid;
             grid-template-columns: repeat(2,1fr);
@@ -159,7 +162,7 @@
         .bar {
             width: 100%;
             height: 8px;
-            background: rgba(255,255,255,0.2);
+            background: rgba(255,255,255,0.1);
             border-radius: 10px;
             overflow: hidden;
         }
@@ -168,9 +171,9 @@
             height: 100%;
             background: #38bdf8;
             border-radius: 10px;
-            width: 0; /* Start at 0 for animation */
+            width: 0;
             animation: fillBar 2s cubic-bezier(0.1, 1, 0.1, 1) forwards;
-            animation-delay: 0.5s; /* Wait for page fade-in */
+            animation-delay: 0.5s;
         }
 
         @keyframes fillBar {
@@ -191,9 +194,16 @@
             align-items: center;
             gap: 8px;
             padding: 10px 14px;
-            background: rgba(56,189,248,0.15);
-            border-radius: 20px;
+            background: rgba(56,189,248,0.1);
+            border: 1px solid rgba(56,189,248,0.2);
+            border-radius: 12px;
             font-size: 0.85rem;
+            transition: 0.3s;
+        }
+
+        .interest:hover {
+            background: rgba(56,189,248,0.2);
+            transform: translateY(-3px);
         }
 
         .interest i { color: #38bdf8; }
@@ -203,15 +213,29 @@
             to { transform: translateY(0); opacity: 1; }
         }
 
-        /* RESPONSIVE */
+        /* ================= RESPONSIVE ================= */
         @media (max-width: 900px) {
             .navbar { padding: 0 40px; }
             .about-main { grid-template-columns: 1fr; }
+            .about-wrapper { padding: 120px 40px 80px; }
             .interests { grid-template-columns: repeat(2,1fr); }
         }
 
-        @media (max-width: 500px) {
-            .navbar { padding: 0 20px; }
+        @media (max-width: 650px) {
+            .navbar {
+                flex-direction: column;
+                height: auto;
+                padding: 15px;
+                gap: 10px;
+            }
+
+            .navbar ul {
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 15px;
+            }
+
+            .about-wrapper { padding: 170px 20px 60px; }
             .about-card { padding: 30px 20px; }
             .about-title h1 { font-size: 2.2rem; }
             .info-grid, .skills-grid, .interests { grid-template-columns: 1fr; }
@@ -225,7 +249,7 @@
     <h2>Sachin</h2>
     <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html" class="active">About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="certifications.html">Certifications</a></li>
         <li><a href="projects.html">Projects</a></li>
@@ -259,7 +283,7 @@
                     I am a passionate software developer with a strong interest in problem-solving and building efficient, user-focused applications. I enjoy working on innovative projects and collaborating in dynamic environments.
                 </p>
             </div>
-            <img src="../assets/images/photo.jpeg" class="profile-img">
+            <img src="../assets/images/photo.jpeg" class="profile-img" alt="Sachin's Profile Photo">
         </div>
 
         <h3 class="section-title">Skills</h3>
